Fix more bar spacing - turns and matches left now sit on top of each other

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 	float: left;
 	width: 32%;
 	margin: 2px;
+	height: 80%;
 }
 
 .bar p {
